--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(main main.cpp)
-target_include_directories(main PUBLIC ${PROJECT_INCLUDE_DIR})
+add_executable(test_segment_set test_segment_set.cpp)
+target_include_directories(test_segment_set PUBLIC ${PROJECT_INCLUDE_DIR} /usr/local/include)
