--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
          "type": "cppdbg",
          "request": "launch",
          "program": "${workspaceFolder}/bin/test_segment_set",
-         "args": [""],
+         "args": ["custom-test-cases"],
          "stopAtEntry": false,
          "cwd": "${workspaceFolder}/bin",
          "environment": [],
